[workspace]
resolver = "2"
members = [
    "argon2",
    "bcrypt-pbkdf",
    "pbkdf2",
    "scrypt",
    "sha-crypt"
]

[profile.dev]
opt-level = 2

[patch.crates-io]
digest = { git = "https://github.com/RustCrypto/traits/", branch = "digest/v0.10" }
block-buffer = { git = "https://github.com/RustCrypto/utils", branch = "block-buffer/v0.10" }
blake2 = { git = "https://github.com/RustCrypto/hashes/", branch = "digest/v0.10.0-pre" }
sha-1 = { git = "https://github.com/RustCrypto/hashes/", branch = "digest/v0.10.0-pre" }
sha2 = { git = "https://github.com/RustCrypto/hashes/", branch = "digest/v0.10.0-pre" }
streebog = { git = "https://github.com/RustCrypto/hashes/", branch = "digest/v0.10.0-pre" }
hmac = { git = "https://github.com/RustCrypto/MACs/", branch = "hmac/v0.12" }
